--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,12 @@
 [tox]
 env_list =
+    py39
+    py310
     py311
 minversion = 4.11.4
 
 [testenv]
-description = run the tests with pytest
+description = Run the tests with pytest
 package = wheel
 wheel_build_env = .pkg
 deps =
