--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,3 +74,15 @@ extend-exclude = '''
   | notebooks
 )/
 '''
+
+# pytest config - new in v6.0
+# Instead of specifying pytest.ini
+# See: https://docs.pytest.org/en/7.1.x/reference/customize.html
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-v --doctest-modules"
+testpaths = [
+    "tests",
+]
+
+#
