--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,3 +42,51 @@ jobs:
       # --cov-fail-under=-1 sets low code coverage from error to warning
       - name: Run unit tests with code cov
         run: pytest --junitxml=junit/test-results.xml --cov=src/ --cov-report=xml --cov-report=html --cov-fail-under=-1
+
+      - name: "Upload coverage data"
+        uses: actions/upload-artifact@v3
+        with:
+          name: "coverage-data"
+          path: .coverage.*
+          if-no-files-found: ignore
+
+  coverage:
+    name: Combine and check coverage
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      # TODO(Alex) Should cache from prior step
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade coverage[toml]
+
+      - name: Download coverage data
+        uses: actions/download-artifact@v3
+        with:
+          name: coverage-data
+
+      - name: Combine coverage
+        run: |
+          python -m coverage combine
+          python -m coverage html --skip-covered --skip-empty
+
+          # Report and write to summary.
+          python -m coverage report | sed 's/^/    /' >> $GITHUB_STEP_SUMMARY
+
+#         # Report again and fail if under 100%.
+#          python -Im coverage report --fail-under=100
+
+      - name: Upload HTML report
+        uses: actions/upload-artifact@v3
+        with:
+          name: html-report
+          path: htmlcov
+#        if: ${{ failure() }}
