--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,7 @@
 # TODOs:
 # * Extend to TOX.
 # * Extend to mac os
+# * Extend to get codecov bagde: https://python-basics-tutorial.readthedocs.io/en/latest/test/coverage.html
 name: Run formatting and unit tests
 
 on:
@@ -41,14 +42,16 @@ jobs:
 
       # --cov-fail-under=-1 sets low code coverage from error to warning
       - name: Run unit tests with code cov
-        run: pytest --junitxml=junit/test-results.xml --cov=src/ --cov-report=xml --cov-report=html --cov-fail-under=-1
+        run: pytest --junitxml=junit/test-results.xml --cov=src/ --cov-report=xml --cov-report=html  --cov-report=term --cov-fail-under=-1
 
       - name: "Upload coverage data"
         uses: actions/upload-artifact@v3
         with:
           name: "coverage-data"
           path: |
-            coverage.*
+            coverage.xml
+            .coverage
+            htmlcov/
             junit/test-results.xml
           if-no-files-found: ignore
 
@@ -77,7 +80,8 @@ jobs:
 
       - name: Combine coverage
         run: |
-          python -m coverage combine
+#         This step is not required, given how I run the code cov
+#          python -m coverage combine
           python -m coverage html --skip-covered --skip-empty
 
           # Report and write to summary.
