--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,8 @@
 # TODOs:
 # * Extend to TOX.
 # * Extend to mac os
+# * Combine coverage steps from https://python-basics-tutorial.readthedocs.io/en/latest/test/coverage.html
+#   are totally pointless. All this info is already generated
 # * Extend to get codecov bagde: https://python-basics-tutorial.readthedocs.io/en/latest/test/coverage.html
 name: Run formatting and unit tests
 
@@ -55,45 +57,9 @@ jobs:
             junit/test-results.xml
           if-no-files-found: ignore
 
-  coverage:
-    name: Combine and check coverage
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-
-      # TODO(Alex) Should cache from prior step
-      - name: Install dependencies
+      - name: Summarise coverage
         run: |
-          python -m pip install --upgrade coverage[toml]
-
-      - name: Download coverage data
-        uses: actions/download-artifact@v3
-        with:
-          name: coverage-data
-
-      - name: Combine coverage
-        run: |
-          python -m coverage html --skip-covered --skip-empty
-
-          # Report and write to summary.
           python -m coverage report | sed 's/^/    /' >> $GITHUB_STEP_SUMMARY
-
-#         # Report again and fail if under 100%.
-#          python -Im coverage report --fail-under=100
-
-      - name: Upload HTML report
-        uses: actions/upload-artifact@v3
-        with:
-          name: html-report
-          path: htmlcov
-#        if: ${{ failure() }}
 
 #      - name: "Create badge"
 #        uses: schneegans/dynamic-badges-action@v1.6.0
