--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
   "ase==3.22.1",
   "Jinja2>=3.1.2",
   "jupyter>=1.0.0",
+  "pandas>=2.1.4",
   "matplotlib==3.8.0",
   "numpy==1.26.1",
   "simple-slurm>=0.2.6",
